k8s-manifests/dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-frontend
  namespace: dev
  labels:
    app: voting-app-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app-frontend
  template:
    metadata:
      labels:
        app: voting-app-frontend
    spec:
      containers:
      - name: frontend
        image: 471318789453.dkr.ecr.us-east-1.amazonaws.com/voting-app-frontend:dev-2d26223
        ports:
        - containerPort: 80
