k8s-manifests/dev/vote-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: voting-app-vote
  namespace: dev
  labels:
    app: voting-app-vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app-vote
  template:
    metadata:
      labels:
        app: voting-app-vote
    spec:
      containers:
      - name: vote
        image: 471318789453.dkr.ecr.us-east-1.amazonaws.com/voting-app-vote:latest
        ports:
        - containerPort: 80
  strategy:
    canary:
      steps:
      - setWeight: 50
      - pause: {duration: 30s}
