k8s-manifests/dev/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-worker
  namespace: dev
  labels:
    app: voting-app-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app-worker
  template:
    metadata:
      labels:
        app: voting-app-worker
    spec:
      containers:
      - name: worker
        image: 471318789453.dkr.ecr.us-east-1.amazonaws.com/voting-app-worker:dev-45a93ce
